--- a/index.html
+++ b/index.html
@@ -14,42 +14,10 @@
     <link href="https://fonts.googleapis.com/css2?family=PT+Sans:ital,wght@0,400;0,700;1,400;1,700&family=Rubik:ital,wght@0,300..900;1,300..900&display=swap" rel="stylesheet">
 
 </head>
-<body class="center">
+<body class="center" onload="init()">
     <div class="atf"></div>
 
-    <div class="card">
-        <nav class="bg-blue padding-8">
-            <a href="index.html">
-                <img src="./img/logo.png" alt="Logo" width="80" height="80" class="d-inline-block align-text-top">
-            </a>
-        </nav>
-        <div class="quiz-questions padding-8">
-            <div class="questions">
-                <h3>Wer hat HTML erfunden?</h3>
-            </div>
-            <div>
-            <div class="answers">
-                <div class="letter">A</div>
-                <span>Robbie Williams</span>
-            </div>
-            <div class="answers">
-                <div class="letter">B</div>
-                <span>Lady Gaga</span>
-            </div>
-            <div class="answers">
-                <div class="letter">C</div>
-                <span>Tim Berners - Lee</span>
-            </div>
-            <div class="answers">
-                <div class="letter">D</div>
-                <span>Justin Bieber</span>
-            </div>
-            </div>
-        </div>
-        <div class="arrows">
-            <img class="icon" src="./img/8666655_arrow_left_circle_icon.png">
-            <img class="icon" src="./img/8666670_arrow_right_circle_icon.png">
-        </div>
+    <div id="content" class="card">
     </div>
 
 
