--- a/index.html
+++ b/index.html
@@ -20,7 +20,10 @@
     />
   </head>
   <body class="center" onload="init()">
-      <progress id="file" value="32" max="100">32%</progress>
+    <div class="atf">
+      <div id="file" role="progressbar"  style="width: 0%;" max="100"></div>
+    </div>
+    
     <div id="content" class="card"></div>
 
     <img id="tropy" class="tropy display-none" src="./img/tropy.png" />
